@@ -1,6 +1,7 @@
 Revision history for perl distribution DBIx-TempDB
 
 0.03 Not Released
+ - Add support for "drop_from_child"
 
 0.02 2015-09-17T20:02:12+0200
  - Fix depending on DBI
